# py-docker

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: cicd.yml  docs.yml
.skill-planning/: README.generated.md  ai-narrative-plan.md  repo_marketing_prose.md
.skills/: generate-documentation-intro.md  generate-readme.md  targeted-marketing.md
docker_db/: __init__.py
docker_db/dbs/: __init__.py  cassandra_db.py  chroma_db.py  mongo_db.py  mssql_db.py  mysql_db.py  neo4j_db.py  ollama_db.py  opensearch_db.py  postgres_db.py  qdrant_db.py  redis_db.py  weaviate_db.py
docker_db/docker/: __init__.py  manager.py  model.py  utils.py
docs/: Makefile  conf.py  index.rst  introduction.rst  quick_start.rst  requirements.txt
docs/databases/: cassandra.md  index.md  mongodb.md  mssql.md  mysql.md  neo4j.md  ollama.md  opensearch.md  postgres.md  qdrant.md  redis.md
docs/source/: docker_db.rst
tests/: __init__.py  conftest.py  test_cassandra.py  test_chroma.py  test_manager.py  test_mongodb.py  test_mssql.py  test_mysql.py  test_neo4j.py  test_notebooks.py  test_ollama.py  test_opensearch.py  test_postgres.py  test_postgres_pgvector.py  test_qdrant.py  test_redis.py  test_weaviate.py  utils.py
tests/configs/postgres/: initdb_pgvector.sh
usage/: db_management_example.ipynb  mongo_example.ipynb  mssql_example.ipynb  mysql_example.ipynb  mysql_example_inspect.ipynb  neo4j_example.ipynb  ollama_example.ipynb  pgvector_rag_example.ipynb  postgres_example.ipynb  postgres_example_inspect.ipynb  redis_example.ipynb  utils.py
usage/configs/postgres/: initdb_pgvector.sh
usage/tmp/oldata/: id_ed25519  id_ed25519.pub
usage/tmp/rddata/: dump.rdb
